// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook 1 1`] = `
<Button
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
        solidcircle={true}
      >
        <div
          className="sc-ifAKCX jzuEBQ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
               share on 
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 2 1`] = `
<Button
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
        solidcircle={true}
      >
        <div
          className="sc-ifAKCX jzuEBQ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 3 1`] = `
<Button
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
        small={true}
        solidcircle={true}
      >
        <div
          className="sc-ifAKCX jzuEBQ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 4 1`] = `
<Button
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
      >
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
               share on 
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 5 1`] = `
<Button
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
      >
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 6 1`] = `
<Button
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
        small={true}
      >
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 7 1`] = `
<Button
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
      >
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                />
              </svg>
               share on 
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 8 1`] = `
<Button
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
      >
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 9 1`] = `
<Button
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        message="I am so cool"
        small={true}
      >
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 10 1`] = `
<Button
  solid={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 11 1`] = `
<Button
  circle={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 11 2`] = `
<Button
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        solidcircle={true}
      >
        <div
          className="sc-ifAKCX jzuEBQ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 12 1`] = `
<Button>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bSlLDy"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-ifAKCX ksIwnZ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                />
              </svg>
               
              Facebook
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 13 1`] = `
<Button
  simple={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u="
    rel="noreferrer noopener"
    simple={true}
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH bGIzAI"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
    >
      <FacebookIconFill>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
          />
        </svg>
      </FacebookIconFill>
    </a>
  </styled.a>
</Button>
`;

exports[`Facebook 14 1`] = `
<Button
  simpleReverse={true}
>
  <styled.a
    aria-label="Share on Facebook"
    href="https://facebook.com/sharer/sharer.php?u="
    rel="noreferrer noopener"
    simpleReverse={true}
    target="_blank"
  >
    <a
      aria-label="Share on Facebook"
      className="sc-bwzfXH jHqTEf"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
    >
      <FacebookIconFill>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
          />
        </svg>
      </FacebookIconFill>
    </a>
  </styled.a>
</Button>
`;
